Fixed spacing

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -109,7 +109,7 @@ body {
     justify-content: center;
     width: 60%;
     margin: auto;
-    padding-bottom: 220px;
+    padding-bottom: 240px;
 }
 
 .edupadding, .projpadding {
